      show the corresponding section entirely
    - fixed: `jacksum -h examples` shows only the first 3 example sections, it should show all example sections
    - added info to the manpage about "cksum -a <algo>" which exists starting with the GNU Core Utilities 9.0
    - added KeccakSum compatibility info to the help file
    - fixed some typos in the help file

- bugs fixed

    - fixed: a NPE is thrown if a non-compatibility file is given by option -C
    - fixed: compat files bsd, linux, and openssl should use line separator \n on Microsoft Windows,
      otherwise md5sum, sha1sum, etc. on GNU/Linux cannot read Jacksum's output
    - fixed: typo in compat files linux and openssl which results in wrong stdin names
    - fixed: Jacksum does not print 100% compatible output by using tagged compat files (bsd, and openssl)
    - fixed: Jacksum does not parse 100% compatible output by using tagged compat files (bsd, and openssl)
    - fixed: speed rank info is calculated wrongly (check with `jacksum -a all --list --info`)
    - fixed: format "#HASH{0,<encoding>}" and  -F "#CHECKSUM{i,<encoding>}" don't work if the user
      has selected one algorithm only
    - fixed: crc32c can be used normal, but it is missing in the --list output
    - fixed: remove the lab-remnant hex-camelcase from the code
    - fixed: a potential mem leak in the Blake3 implementation
    - fixed: don't print a warning about implicitly set format if we have set -C and we are in check mode


Jacksum 3.0.0, Sep 4, 2021

- Algorithms

  new algorithms
    - 408 new algorithms (including different sizes) have been added
    - SHA-3 winner of the NIS SHA-3 competition (FIPS 202)
      * SHA3-224, SHA3-256, SHA3-384, SHA3-512 provided by the OpenJDK 9+ resp.
        by bouncycastle (bc) as an alternative implementation or if Java < 9 is being used
	  * SHAKE128, SHAKE256 (provided by bc)
    - completion of the SHA-2 family definitions (FIS 180-4):